# backend_java/src/main/java/com/cadence/api/workouts/TargetTypeConverter.java
@@ -1,0 +1,12 @@
+package com.cadence.api.workouts;
+
+import com.cadence.api.common.jpa.LowercaseEnumConverter;
+import jakarta.persistence.Converter;
+
+@Converter(autoApply = true)
+public class TargetTypeConverter extends LowercaseEnumConverter<TargetType> {
+
+	public TargetTypeConverter() {
+		super(TargetType.class);
+	}
+}
